--- a/src/pages/home-page/style.scss
+++ b/src/pages/home-page/style.scss
@@ -1,4 +1,4 @@
 .home-page {
-    min-height: 100vh;
-    height: fit-content;
+height: 100%;
+
 }
